@@ -76,6 +76,7 @@ CHANGELOG Roundcube Webmail
 - Fix various issues when downloading files with names containing non-ascii chars, use RFC 2231 (#5772)
 - Fix parsing date strings (e.g. from a Date: mail header) with comments (#6216)
 - Fix possible IMAP command injection and type juggling vulnerabilities (#6229)
+- Enigma: Fix key selection for signing
 
 RELEASE 1.3.5
 -------------
